--- a/Lezione_1/main.css
+++ b/Lezione_1/main.css
@@ -1,9 +1,13 @@
 body {
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
 }
 
 #product-overview {
     background-color: #ff1b68;
+    width: 100%;
+    height: 528%;
+    padding: 10px;
 }
 
 #product-overview h1 {
@@ -14,3 +18,55 @@ body {
 .section-title {
     color: #2ddf5c;
 }
+
+.main-header {
+    width: 100%;
+    background: #2ddf5c;
+    padding: 8px 16px;
+}
+
+.main-header > div {
+    display: inline-block;
+}
+
+.main-header__brand {
+    color: #0e4f1f;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+.main-nav {
+    display:inline-block;
+    text-align: right;
+    width: calc(100% - 74px);
+    vertical-align: middle;
+}
+
+.main-nav__items {
+    margin:0;
+    padding:0;
+    list-style: none;
+}
+
+.main-nav__item {
+    display:inline-block;
+    padding: 0px 16px;
+}
+
+.main-nav__item a {
+    text-decoration: none;
+    color: #0e4f1f;
+    font-weight: bold;
+    padding: 3px
+}
+
+
+.main-nav__item a:hover,
+.main-nav__item a:active {
+    color:white;
+    border-bottom: solid 5px white;
+}
+
+
+
