--- a/Lezione_1/main.css
+++ b/Lezione_1/main.css
@@ -1,13 +1,21 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
 }
 
 #product-overview {
-    background-color: #ff1b68;
+    background: url("freedom.jpg");
     width: 100%;
-    height: 528%;
-    padding: 10px;
+    height: 528px;
+    padding: 10px;   
+}
+
+.section-title {
+    color: #2ddf5c;
 }
 
 #product-overview h1 {
@@ -15,9 +23,9 @@ body {
     font-family: 'Anton', sans-serif;
 }
 
-.section-title {
-    color: #2ddf5c;
-}
+/* h1 {
+    font-family: sans-serif;
+} */
 
 .main-header {
     width: 100%;
@@ -27,6 +35,7 @@ body {
 
 .main-header > div {
     display: inline-block;
+    vertical-align: middle;
 }
 
 .main-header__brand {
@@ -37,36 +46,46 @@ body {
 }
 
 .main-nav {
-    display:inline-block;
+    display: inline-block;
     text-align: right;
     width: calc(100% - 74px);
     vertical-align: middle;
 }
 
 .main-nav__items {
-    margin:0;
-    padding:0;
+    margin: 0;
+    padding: 0;
     list-style: none;
 }
 
 .main-nav__item {
-    display:inline-block;
-    padding: 0px 16px;
+    display: inline-block;
+    margin: 0 16px;
 }
 
 .main-nav__item a {
     text-decoration: none;
     color: #0e4f1f;
     font-weight: bold;
-    padding: 3px
+    padding: 3px 0;
 }
-
 
 .main-nav__item a:hover,
 .main-nav__item a:active {
-    color:white;
-    border-bottom: solid 5px white;
+    color: white;
+    border-bottom: 5px solid white;
 }
 
+.main-nav__item--cta a {
+    color: white;
+    background: #ff1b68;
+    padding: 8px 16px;
+    border-radius: 8px;
+}
 
-
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active {
+    color: #ff1b68;
+    background: white;
+    border: none;
+}
