--- a/Lezione_5/shared.css
+++ b/Lezione_5/shared.css
@@ -6,8 +6,10 @@ body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
 }
+
 .main-header {
     width: 100%;
+    position: fixed;
     background: #2ddf5c;
     padding: 8px 16px;
 }
