--- a/Lezione_8/customers/customers.css
+++ b/Lezione_8/customers/customers.css
@@ -1,5 +1,5 @@
 .testimonial {
-    font-size:1.2rem;
+    font-size: 1.2rem;
     margin: 3rem 0;
   }
   
@@ -17,12 +17,12 @@
     max-width: 580px;
     display: inline-block;
     vertical-align: middle;
-    box-shadow: 3px 3px 5px 3px rgba(0,0,0,0.3)
+    box-shadow: 3px 3px 5px 3px rgba(0,0,0,0.3);
   }
 
   .testimonial__image {
     width: 100%;
-    vertical-align: bottom;
+    vertical-align: top;
   }
   
   .testimonial__info {
@@ -42,7 +42,7 @@
   }
   
   .testimonial__name {
-    margin: 3px;
+    margin: 0.2rem;
     color: #ff5454;
     font-size: 2rem;
   }
@@ -62,9 +62,9 @@
   .testimonial__subtitle a:active {
     color: #7a7a7a;
   }
-  
+
   .testimonial__text {
-    margin: 3px;
+    margin: 0.2rem;
   }
   
   
