--- a/Lezione_8/packages/packages.css
+++ b/Lezione_8/packages/packages.css
@@ -3,10 +3,10 @@ main {
 }
 
 .background {
-    background: url("../images/plans-background.jpg"), center/cover;
+    background: url("../images/plans-background.jpg") center/cover;
     filter: grayscale(40%);
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     position: fixed;
     z-index: -1;
 }
@@ -38,7 +38,7 @@ main {
     top: 0;
     right: 0;
     margin: 1.2rem;
-    font-size: 0.8rems;
+    font-size: 0.8rem;
     color: white;
     background: #ff5454;
     padding: 0.5rem;
